# lywsd03mmc-access

./: .flake8  .gitignore  .pylintrc  LICENSE  README.md  pyproject.toml
doc/: cmdargs.md  cmdargs.txt  generate-doc.sh
examples/: data_poll.txt  example_history.json  fridge_in_measurements.json  fridge_in_measurements.txt  fridge_out_measurements.json  fridge_stability.json  generate-all.sh  outdoor_stability.json  room_stability.json  unfreeze_measurements.json
examples/data/: data_subscribe.txt  fridge_in_measurements.json  fridge_out_measurements.json  fridge_out_measurements.txt  fridge_stability.json  generate-all.sh  outdoor_stability.json
examples/scripts/: _tools.sh  info.sh  readdata.sh  readhistory.sh
src/: install-app.sh  install-deps.sh  requirements.txt  setup.py
src/lywsd03mmcaccess/: __init__.py  io.py  main.py  thermometeraccess.py  utils.py
src/testlywsd03mmcaccess/: __init__.py  runtests.py  test_logger.py
tools/: codecheck.sh  mdcheck.sh  typecheck.sh
